# Sugarpp

./: .gitignore  CMakeLists.txt  CXXWinApi_8h_source.html  File_8h_source.html  LICENSE  README.md  SppDefines_8h_source.html  SppString_8h_source.html  Tracing_8h_source.html  XmlParser_8h_source.html  annotated.html  classes.html  classspp_1_1CXXWinApi-members.html  classspp_1_1CXXWinApi.html  classspp_1_1File-members.html  classspp_1_1File.html  classspp_1_1String-members.html  classspp_1_1String.html  classspp_1_1Tracing-members.html  classspp_1_1Tracing.html  classspp_1_1XmlParser-members.html  classspp_1_1XmlParser.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  md__home_runner_work_Sugarpp_Sugarpp_README.html  pages.html
.github/workflows/: ccpp.yml  ci-linux.yml  ci-windows.yml  codeql-analysis.yml  msvc.yml
doc/: Doxyfile.in
include/: CXXWinApi.h  File.h  SppDefines.h  SppString.h  Tracing.h  XmlParser.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js
src/: CMakeLists.txt  CXXWinApi.cpp  File.cpp  SppString.cpp  Tracing.cpp  XmlParser.cpp
test/: CMakeLists.txt  CXXWinApiTest.cpp  FileTest.cpp  SppStringTest.cpp  XmlParserTest.cpp  main.cpp
